# poppy

./: .gitignore  CHANGELOG.org  README.md  install.sh  meson.build  meson_options.txt  poppy_sample.conf
doc/: main.tex
frontend/css/: index.css
frontend/js/: main.js  package.json  webpack.config.js
include/: globals.h  mailbox.h  mailservice.h  pop3client.grpc.pb.h  pop3client.pb.h  pop3socket.h
protos/: compile_protobuf_grpc.sh  pop3client.proto  poppy.proto
share/poppy/: envoy_poppy_proxy.yaml  index.html
share/poppy/css/: index.css
share/poppy/js/: compile_javascript_frontend.sh  main.js  package-lock.json
src/: globals.cpp  mailbox.cpp  mailservice.cpp  main.cpp  pop3client.grpc.pb.cc  pop3client.pb.cc  pop3socket.cpp
src/code_samples/: CLI11.cpp  json.cpp  spdlog.cpp
test/python_grpc_test/: compile_protobuf_grpc.sh  main.py  pop3client_pb2.py  pop3client_pb2_grpc.py
