option('cli11_include_dir', type : 'string', value : '/usr/local/include', description : 'the dir containing CLI11.hpp')
option('spdlog_include_dir', type : 'string', value : '/usr/local/include', description : 'the include dir of spdlog')
option('subprocess_include_dir', type : 'string', value : '/usr/local/include', description : 'the dir containing subprocess.hpp')
option('toml_include_dir', type : 'string', value : '/usr/local/include', description : 'the include dir of toml++')
